Fix focus visible styles

--- a/docs/src/components/Demo/Demo.css
+++ b/docs/src/components/Demo/Demo.css
@@ -240,7 +240,6 @@
       outline: 2px solid var(--color-blue);
       outline-offset: -1px;
       z-index: 1;
-      position: relative;
     }
   }
 }
